--- a/package.json
+++ b/package.json
@@ -40,15 +40,20 @@
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
-    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "testdebug": "mocha debug -r ts-node/register test/**/*.test.ts",
     "version": "oclif-dev readme && git add README.md"
   },
   "types": "lib/index.d.ts",
   "devDependencies": {
     "@oclif/test": "^1.2.8",
+    "@types/chai": "^4.2.19",
     "@types/mocha": "^8.2.2",
+    "chai": "^4.3.4",
+    "chai-match": "^1.1.1",
     "mocha": "^9.0.1",
     "nyc": "^15.1.0",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   }
 }
